# sprat-gui

./: .clang-format  .clangd  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  DEPENDENCIES  DartConfiguration.tcl  INSTALLATION.md  ITCH_IO_METADATA.md  LICENSE  README.md  RELEASE_NOTES_v0.2.5.md  WASM_DEPLOYMENT.md  build.sh  build_wasm_no_assert.sh  build_windows.bat
.githooks/: pre-commit
.github/workflows/: ci.yml
assets/: icons.qrc
build_analysis/: DartConfiguration.tcl
build_wasm/: index.html  sprat-gui.js
build_wasm/emsdk_cache/: sanity.txt
build_wasm/sprat-cli-build/: spratconvert.js  spratconvert.wasm  spratframes.js  spratframes.wasm  spratlayout.js  spratlayout.wasm  spratpack.js  spratpack.wasm  spratprofiles.cfg  spratunpack.js  spratunpack.wasm
build_wasm/sprat-cli-build/spratconvert_autogen/: deps  moc_predefs.h
build_wasm/sprat-cli-build/spratcore_autogen/: deps  moc_predefs.h
build_wasm/sprat-cli-build/spratframes_autogen/: deps
build_wasm/sprat-cli-build/spratlayout_autogen/: deps  moc_predefs.h
build_wasm/sprat-cli-build/spratpack_autogen/: deps
build_wasm/sprat-cli-build/spratunpack_autogen/: deps
build_wasm/sprat-cli-build/transforms/: css.transform  csv.transform  json.transform  xml.transform
deploy/linux/: .itch.toml  sprat-gui.desktop
deploy/macos/: .itch.toml
deploy/sprat-gui-itch/: .itch.toml  README.md  index.html  sprat-gui.data  sprat-gui.js
deploy/windows/: .itch.toml
i18n/: sprat-gui_en.ts  sprat-gui_pt_BR.ts
src/Animation/: AnimationCanvas.cpp  AnimationCanvas.h  AnimationExportService.cpp  AnimationExportService.h  AnimationManager.cpp  AnimationManager.h  AnimationPlaybackService.cpp  AnimationPlaybackService.h  AnimationPreviewService.cpp  AnimationPreviewService.h
src/Animation/Test/: AnimationTestOps.cpp  AnimationTestOps.h
src/Animation/Timelines/: AnimationTimelineOps.cpp  AnimationTimelineOps.h  TimelineBuilder.cpp  TimelineBuilder.h  TimelineGenerationService.cpp  TimelineGenerationService.h  TimelineListWidget.cpp  TimelineListWidget.h  TimelineUi.cpp  TimelineUi.h
src/App/: WasmFileDialog.cpp  WasmFileDialog.h  WasmFolderBrowserDialog.cpp  WasmFolderBrowserDialog.h  main.cpp
src/App/MainWindow/: AnimationPreviewPanel.cpp  AnimationPreviewPanel.h  AtlasLayoutWorkspace.cpp  AtlasLayoutWorkspace.h  AtlasesManagementWorkspace.cpp  AtlasesManagementWorkspace.h  ElidedLabel.h  ExportCoordinator.cpp  ExportCoordinator.h  ExportDiffDialog.cpp  ExportDiffDialog.h  ExportWorkspace.cpp  ExportWorkspace.h  FrameAnimationWorkspace.cpp  FrameAnimationWorkspace.h  FrameDetectionCanvas.cpp  FrameDetectionCanvas.h  FrameDetectionDialog.cpp  FrameDetectionDialog.h  IAtlasViewport.h  ILayoutContext.h  LayoutOrchestrator.cpp  LayoutOrchestrator.h  MainWindow.Animation.cpp  MainWindow.Cli.cpp  MainWindow.Events.cpp  MainWindow.ImageLoading.cpp  MainWindow.LayoutFlow.cpp  MainWindow.Marker.cpp  MainWindow.Navigator.cpp  MainWindow.Project.cpp  MainWindow.TimelineEditor.cpp  MainWindow.Ui.cpp  MainWindow.cpp  MainWindow.h  MainWindowUiState.cpp  MainWindowUiState.h  NavigatorPanel.cpp  NavigatorPanel.h  NavigatorTreeWidget.cpp  (+16 more)
src/App/MainWindow/Undo/: MarkerCommands.h  NavigatorCommands.h  ProjectCommands.h  SessionUndoCommand.h  SpriteCommands.h  TimelineCommands.h  TrashBin.h  ViewCommands.h
src/App/Workspaces/: IWorkspace.h
src/CLITools/: CliSetupController.cpp  CliSetupController.h  CliToolInstaller.cpp  CliToolInstaller.h  CliToolsConfig.cpp  CliToolsConfig.h  CliToolsUi.cpp  CliToolsUi.h  EmbeddedCli.cpp  EmbeddedCli.h  FolderSyncService.cpp  FolderSyncService.h  LayoutRunner.cpp  LayoutRunner.h  SourceFolderWatcher.cpp  SourceFolderWatcher.h  SpratCliLocator.cpp  SpratCliLocator.h
src/Core/: AnimatedImageImport.h  AnimationModels.h  AppConstants.h  AppSettings.h  ArchiveExtractor.cpp  ArchiveExtractor.h  CliPaths.h  DropAction.h  ExportModels.h  ImportPathSupport.h  LayoutModels.h  MarkerModels.h  MarkerUtils.h  MessageDialog.cpp  MessageDialog.h  ProjectModels.h  ResolutionUtils.h  SplitModeUtils.h  SpriteModels.h  SpriteNameUtils.h  SpriteTreeUtils.cpp  SpriteTreeUtils.h  SyncMode.h  ViewEnums.h  ViewUtils.cpp  ViewUtils.h  WasmResizeDebounce.cpp  WasmResizeDebounce.h  ZoomableGraphicsView.cpp  ZoomableGraphicsView.h  models.h
src/NineSlice/: NineSliceEditorCanvas.cpp  NineSliceEditorCanvas.h  NineSlicePreviewWidget.cpp  NineSlicePreviewWidget.h
src/Profiles/: ProfilesDialog.cpp  ProfilesDialog.h  ResolutionsConfig.cpp  ResolutionsConfig.h  SpratProfilesConfig.cpp  SpratProfilesConfig.h
src/Project/: AutosaveProjectStore.cpp  AutosaveProjectStore.h  ImageDiscoveryService.cpp  ImageDiscoveryService.h  ImageFolderSelectionDialog.cpp  ImageFolderSelectionDialog.h  NewProjectDialog.cpp  NewProjectDialog.h  ProjectData.cpp  ProjectData.h  ProjectFileLoader.cpp  ProjectFileLoader.h  ProjectPayloadCodec.cpp  ProjectPayloadCodec.h  ProjectSaveService.cpp  ProjectSaveService.h  ProjectSession.cpp  ProjectSession.h  SaveDialog.cpp  SaveDialog.h
src/Project/Repositories/: ExportRepository.cpp  ExportRepository.h  MarkerRepository.cpp  MarkerRepository.h  SourceRepository.cpp  SourceRepository.h  SpriteRepository.cpp  SpriteRepository.h
src/SelectedSpriteFrame/: EditorOverlayItem.cpp  EditorOverlayItem.h  PreviewCanvas.cpp  PreviewCanvas.h  SpriteSelectionPresenter.cpp  SpriteSelectionPresenter.h
src/SelectedSpriteFrame/Markers/: MarkersDialog.cpp  MarkersDialog.h
src/Settings/: SettingsCoordinator.cpp  SettingsCoordinator.h  SettingsDialog.cpp  SettingsDialog.h
src/SpriteSheetLayout/: LayoutCanvas.cpp  LayoutCanvas.h  LayoutParser.cpp  LayoutParser.h  SpriteItem.cpp  SpriteItem.h
src/Update/: UpdateChecker.cpp  UpdateChecker.h  UpdateDialog.cpp  UpdateDialog.h  UpdateInstaller.cpp  UpdateInstaller.h
tests/: AnimationTests.cpp  AnimationTests.h  CoreTests.cpp  CoreTests.h  ImageDiscoveryTests.cpp  ImageDiscoveryTests.h  LayoutTests.cpp  LayoutTests.h  ProjectSessionTests.cpp  ProjectSessionTests.h  ProjectTests.cpp  ProjectTests.h  TestMain.cpp
wasm/: egl_stub.c  mktime_fix.js
(+22 files in other folders)
